# yew_confetti

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml
pages/: Cargo.toml  Trunk.prod.toml  index.html
pages/src/: main.rs
src/: lib.rs
