[package]
name = "yew_confetti"
authors = ["Finn Bear"]
version = "0.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/yew_confetti/"
description = "Confetti animation for Yew websites"

[dependencies]
js-sys = "0.3.72"
web-sys = { version = "0.3.72", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "MediaQueryList"] }
yew = "0.21.0"
